MemberController에서 ajax처리하는 컨트럴러 분리 (MemberRestController 생성 ) 게시판 경로 올바르게 이동할 수 있도록 수정

--- a/pom.xml
+++ b/pom.xml
@@ -277,15 +277,11 @@
 
 	<build>
 		<!-- WAR 파일 명 -->
-		<finalName>lhs</finalName>
+		<finalName>ROOT</finalName>
 
-		<!-- 환경설정에 관한 태그 -->
 		<resources>
 			<resource>
 				<directory>src/main/resources-common</directory>
-			</resource>
-			<resource>
-				<directory>src/main/resources-${env}</directory>
 			</resource>
 			<resource>
 				<directory>${project.build.sourceDirectory}</directory>
@@ -294,7 +290,6 @@
 				</includes>
 			</resource>
 		</resources>
-		<!-- /환경설정에 관한 태그 -->
 
 		<plugins>
 			<!-- 리소스를 시스템 환경에 맞게 구분해주는 플러그인 -->
@@ -307,7 +302,6 @@
 				</configuration>
 			</plugin>
 			<!-- /resource 구분 플러그인 -->
-
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
@@ -318,7 +312,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.3.2</version>
 				<configuration>
 					<warSourceDirectory>WebContent</warSourceDirectory>
 				</configuration>
