--- a/.gitignore
+++ b/.gitignore
@@ -76,9 +76,9 @@ buildNumber.properties
 
 # Eclipse m2e generated files
 # Eclipse Core
-.project
+!.project
 # JDT-specific (Eclipse Java Development Tools)
-.classpath
+!.classpath
 
 ### VisualStudioCode ###
 .vscode/*
