--- a/src/main/resources-op/config.ini
+++ b/src/main/resources-op/config.ini
@@ -1,3 +1,3 @@
 # key=value
-site.context.path=/lhs
-project.file.upload.location=/home/ubuntu/app/upload/lhs
+site.context.path=/whdud
+project.file.upload.location=/home/ec2-user/app/file
