method수정 및 restFul하게 최대한 수정 반환타입 수정이 필요

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -46,7 +46,7 @@
 
 	<servlet-mapping>
 		<servlet-name>smarty</servlet-name>
-		<url-pattern>*.do</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<!-- Spring servlet end -->
 
