--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,19 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
-	  <dependencies>
+	 <dependencies>
 
+ 		<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+		
       <!-- 비밀번호 확인 용 메일수신 library -->
       <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
       <dependency>
